2008-04-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump version number to 8.5.3b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.2 and
	* unix/configure.in:	8.5.3 releases.
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
	* tests/main.test (main-3.*):      error. [Bug 1937135]

	* generic/tkArgv.c: fix -help mem explosion. [Bug 1936238] (kenny)

2008-04-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl: fix the colour of labelframe in xp

2008-04-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkStubLib.c (Tk_InitStubs):	Added missing error message.
	* generic/tkWindow.c (Tk_PkgInitStubsCheck):

2008-03-28  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.2 TAGGED FOR RELEASE ***

	* README:		Bump to 8.5.2 for release.
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.2 release.

2008-03-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/safetk.tcl (::safe::tkInterpInit): make sure tk_library
	and its subdirs (eg, ttk) are on the "safe" access path.

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): fix 64bit support for Sun cc. [Bug 1921166]

	* unix/configure: autoconf-2.59

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* generic/ttk/ttkStubLib.c:	ensure tcl stubs are used in libtkstub
					even in a static build of Tk.
	* generic/ttk/ttkDecls.h:	fix incorrect number of arguments in
					Ttk_InitStubs macro definition.

2008-03-26  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.2 release.

	* unix/tkUnixCursor.c:	Stop crash in [. configure -cursor] on X11.
	Thanks to emiliano gavilán.  [Bug 1922466]
